syntax = "proto3";

package proto;

message Chart {
    string fileName = 1;
    bytes content = 2;
    int64 fileSize = 3;
}

// Tiller is the Helm Server
message Tiller {
    string endpoint = 1;
    string username = 2;
    string password = 3;
    string account = 4;
    bool skipSslValidation = 5;
}